[package]
name = "reciprocity_communication"
version = "0.1.11"
authors = ["Autumnal <friedrich122112@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0"
futures = "^0"
thiserror = "^1"
serde = { version = "^1", features = ["derive"] }
rmp-serde = "^0"
tokio-tungstenite = "^0"
tungstenite = {version = "^0.13", default-features = false, features = ["rustls-tls"]}
tokio-stream = "^0"
url = "^2"
reqwest = {version = "^0", default-features = false, features = ["rustls-tls"]}

webbrowser = { version = "^0", optional = true }
serde_json = { version = "^1", optional = true }
oauth2 = {version = "^4", default-features = false, features = ["rustls-tls"]}
serde-diff = "^0"

tokio = { version = "^1", features = ["rt-multi-thread", "time", "sync", "net"] }

[features]
default = []
host = ["serde_json"]
client = ["webbrowser"]