[package]
name = "reciprocity_communication"
version = "0.2.1"
authors = ["Autumnal <friedrich122112@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
futures = "^0.3"
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
rmp-serde = "^0.15"
tokio-tungstenite = "^0.14"
tungstenite = {version = "^0.13", default-features = false, features = ["rustls-tls"]}
tokio-stream = "^0.1"
url = "^2.1"
reqwest = {version = "^0.11", default-features = false, features = ["rustls-tls"]}

webbrowser = { version = "^0.5", optional = true }
serde_json = { version = "^1.0", optional = true }
oauth2 = {version = "^4.0", default-features = false, features = ["rustls-tls"]}
serde-diff = "^0.4"

tokio = { version = "^1.1", features = ["rt-multi-thread", "time", "sync", "net"] }

[features]
default = []
host = ["serde_json"]
client = ["webbrowser"]